# agent_task_framework

./: .gitignore  README.md  TODO.md  final_instructor.py  pyproject.toml  requirements.txt  test_progressive.py
atf/: __init__.py  main.py
docs/: dspy_for_beginners.md  dspy_methodology.md  framework_principles.md  prd.md  technical_design.md  tutorial_background_agents.md
examples/: example_scenarios.py
tests/: __init__.py  test_clarifier.py
